<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"

        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/edFilmTitle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_700"
            android:hint="@string/question_film"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="#BCAAA4"
            android:autofillHints="none"
            android:layout_marginEnd="5dp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:background="@drawable/button_radius"
            android:text="@string/search"
            android:textColor="@color/white"
            android:layout_weight="0"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"

        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btnBayda"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_border"
            android:text="@string/bayda"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnKosmos"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_border"
            android:text="@string/kosmos"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnKinoMax"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_border"
            android:text="@string/kinomax"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnBlockbuster"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_border"
            android:text="@string/blockbuster"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <Button
            android:id="@+id/btnToday"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/button_border"
            android:text="@string/today"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnTomorrow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_border"
            android:text="@string/tomorrow"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnDayAfter"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/button_border"
            android:text="@string/day_after"
            android:textColor="#FF8A80"
            android:textSize="12sp"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"

        android:paddingTop="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:indeterminateTint="@color/purple_700"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:layout_marginTop="15dp"
            android:text=""
            android:textSize="17sp"
            android:textColor="#FF8A80"
            android:textAlignment="center"
            />
    </LinearLayout>

</android.widget.LinearLayout>

